feat: add locomotive scroll

--- a/001/index.html
+++ b/001/index.html
@@ -1,1 +1,25 @@
-st
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Recreate | 001</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css" />
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main data-scroll-container></main>
+
+  <script src="/dist/locomotive-scroll.min.js"></script>
+  <script>
+    (function () {
+      var scroll = new LocomotiveScroll();
+    })();
+  </script>
+</body>
+
+</html>
