feat: header text animation

--- a/001/index.html
+++ b/001/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <main data-scroll-container>
-    <header class="nav-header">
+    <header class="nav-header" data-scroll-section>
       <div class="site-name">
         <h1>
           Basic <span>&reg;</span>
@@ -41,6 +41,23 @@
         </svg>
       </button>
     </header>
+    <section data-scroll-section>
+      <header class="main-header">
+        <h1>
+          What's next <br>
+          starts
+        </h1>
+        <h1>
+          <span class="dot"></span> here
+        </h1>
+      </header>
+      <div class="intro-image">
+        <figure>
+          <img src="./assets/hero.png" alt="" />
+        </figure>
+      </div>
+
+    </section>
   </main>
 
   <script src="/dist/locomotive-scroll.min.js"></script>
