--- a/001/index.html
+++ b/001/index.html
@@ -10,6 +10,10 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/CSSRulePlugin.min.js"></script>
+
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -41,31 +45,44 @@
         </svg>
       </button>
     </header>
-    <section data-scroll-section>
-      <header class="main-header">
-        <h1>
+    <section class="intro" data-scroll-section>
+      <header class="main-header" data-scroll-section>
+        <h1 data-scroll data-scroll-direction="horizontal" data-scroll-speed="-3" data-scroll-repeat="true">
           What's next <br>
           starts
         </h1>
-        <h1>
+        <h1 data-scroll data-scroll-direction="horizontal" data-scroll-speed="3" data-scroll-repeat="true">
           <span class="dot"></span> here
         </h1>
       </header>
-      <div class="intro-image">
+      <!-- <div class="intro-image">
         <figure>
-          <img src="./assets/hero.png" alt="" />
+          <img class="intro__image" src="./assets/hero.png" alt="" />
         </figure>
-      </div>
+
+
+      </div> -->
+
+      <section class="section section--intro">
+        <img class="hero__image"
+          src="https://images.unsplash.com/photo-1580983563878-706ee872c772?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+          alt="" />
+      </section>
 
     </section>
   </main>
 
   <script src="/dist/locomotive-scroll.min.js"></script>
+
   <script>
-    (function () {
-      var scroll = new LocomotiveScroll();
-    })();
+    const scroller = new LocomotiveScroll({
+      el: document.querySelector('[data-scroll-container]'),
+      smooth: true
+    });
+
   </script>
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
